Fix overlay on mobile view

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -523,9 +523,6 @@ footer .copyright {
   .portfolio .item h4 {
     font-size: 12px;
   }
-  .portfolio .overlay {
-    height: 50%;
-  }
 }
 .portfolio-page {
   margin-top: 50px;
